--- a/styles/global.css
+++ b/styles/global.css
@@ -3,3 +3,35 @@
     padding: 0;
 }
 
+:root{
+    /*cores principais*/
+    --red:#E3646E;
+    --purple:#BB72E9;
+    --blue:#3996DB;
+    --green:#82BC4F;
+    --yellow:#EABD5F;
+
+    /*cores base*/
+
+    --gray-100:#0D0E11;
+    --gray-200:#16181D;
+    --gray-300:#292C34;
+    --gray-400:#878EA1;
+    --gray-500:#C0C4CE;
+    --gray-600:#E2E4E9;
+
+    /*tipografia*/
+
+    --ff-asap: 'Asap', sans-serif;
+    --ff-inconsolata: 'Iconsolata', sans-serif;
+    --ff-maven-pro: 'Maven-Pro', sans-serif;
+
+    --fs-lg-asap: 3.5rem;
+    --fs-md-asap: 1.5rem;
+    --fs-sm-asap: 1rem;
+
+    --fs-s-incosolata: 1.25rem;
+
+    --fs-md-mpro: 1rem
+    --fs-sm-mpro: 0.875rem
+}
