--- a/styles/global.css
+++ b/styles/global.css
@@ -3,23 +3,26 @@
     padding: 0;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth; /* Define um comportamento de rolagem suave para o documento HTML. Isso faz com que, ao clicar em um link que leva a uma âncora na mesma página, a rolagem ocorra de forma gradual, em vez de ser instantânea, proporcionando uma experiência de navegação mais agradável para o usuário. */
+}
 
 :root{
     /*cores principais*/
-    --red:#E3646E;
-    --purple:#BB72E9;
-    --blue:#3996DB;
-    --green:#82BC4F;
-    --yellow:#EABD5F;
+    --color-red:#E3646E;
+    --color-purple:#BB72E9;
+    --color-blue:#3996DB;
+    --color-green:#82BC4F;
+    --color-yellow:#EABD5F;
 
     /*cores base*/
 
-    --gray-100:#0D0E11;
-    --gray-200:#16181D;
-    --gray-300:#292C34;
-    --gray-400:#878EA1;
-    --gray-500:#C0C4CE;
-    --gray-600:#E2E4E9;
+    --color-gray-100:#0D0E11;
+    --color-gray-200:#16181D;
+    --color-gray-300:#292C34;
+    --color-gray-400:#878EA1;
+    --color-gray-500:#C0C4CE;
+    --color-gray-600:#E2E4E9;
 
     /*tipografia*/
 
@@ -27,12 +30,48 @@
     --ff-inconsolata: 'Iconsolata', sans-serif;
     --ff-maven-pro: 'Maven-Pro', sans-serif;
 
-    --fs-lg-asap: 700 3.5rem/120%;
-    --fs-md-asap: 700 1.5rem/120%;
-    --fs-sm-asap: 700 1rem/120%;
+    --title-lg: 700 3.5rem/120% var(--ff-asap);
+    --title-md: 700 1.5rem/120% var(--ff-asap);
+    --title-sm: 700 1rem/120% var(--ff-asap);
 
-    --fs-s-incosolata: 400 1.25rem/120%;
+    --subtitle: 400 1.25rem/120% var(--ff-inconsolata);
 
-    --fs-md-mpro: 400 1rem 140%;
-    --fs-sm-mpro: 400 0.875rem 140%;
+    --text-md: 400 1rem 140% var(--ff-maven-pro);
+    --text-sm: 400 0.875rem 140% var(--ff-maven-pro);
+}
+
+body{
+    font:var(--text-sm);
+    color: var(--color-gray-600);
+    background-color: var(--color-gray-200);
+}
+
+a{
+    text-decoration: none;
+    color: inherit; /* Define que a cor do texto dos links (<a>) deve herdar a cor do seu elemento pai. Isso garante que os links tenham a mesma cor que o texto ao seu redor, mantendo a consistência visual e evitando que os links se destaquem de maneira indesejada. */
+}
+h1, h2, h3{
+    font: inherit; /* Define que os elementos de cabeçalho (h1, h2, h3) herdarão todas as propriedades de fonte do seu elemento pai. Isso garante que a tipografia dos cabeçalhos seja consistente com o restante do texto na página, permitindo uma melhor integração visual e evitando discrepâncias de estilo. */
+}
+
+img{
+    max-width: 100%;
+}
+
+.container{
+    max-width: 1040px;
+    margin: 0 auto;
+}
+
+.title-section{
+    font: var(--subtitle);
+    color: var(--color-red);
+    margin-bottom: 8px;
+    text-align: center;
+}
+
+.subtitle-section{
+    font: var(--title-md);
+    color:  var(--color-gray-600);
+    text-align: center;
 }
