--- a/styles/global.css
+++ b/styles/global.css
@@ -59,14 +59,14 @@ img{
 }
 
 .container{
-    max-width: 1040px;
+    max-width: 65rem;
     margin: 0 auto;
 }
 
 .title-section{
     font: var(--subtitle);
     color: var(--color-red);
-    margin-bottom: 8px;
+    margin-bottom: 0.5rem;
     text-align: center;
 }
 
