--- a/styles/jobs.css
+++ b/styles/jobs.css
@@ -9,13 +9,13 @@
     margin-bottom:  3.5rem;
 }
 
-#jobs .cards{
+.jobs .cards{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1.5rem;
 }
 
-#jobs .cards .card-item{
+.jobs .cards .card-item{
     display: flex;
     max-width: 20.625rem;
     flex-direction: column;
@@ -28,22 +28,22 @@
     transition: border 0.3s ease;
 }
 
-#jobs .cards .card-item:hover{
+.jobs .cards .card-item:hover{
     border-color: var(--color-gray-400);
 }
 
-#jobs .cards .card-item img{
+.jobs .cards .card-item img{
     width: 100%;
     border-radius: 0.5rem;
     margin-bottom: 1.25rem;
 }
 
-#jobs .cards .card-item span{
+.jobs .cards .card-item span{
     font: var(--text-sm);
     font-weight: 700;
     margin-bottom: 0.5rem;
 }
 
-#jobs .cards .card-item p{
+.jobs .cards .card-item p{
     font: var(--text-sm);
 }
